[CALCITE-6590] Remove use of Java SecurityManager in Avatica
Also bump ByteBuddy version to 1.15.1